Revert "Merge branch '1.16-master' into port/1.16.5"
This reverts commit 18c06d82557c01f27893042896f7cefdbf96e002, reversing
changes made to e02cab5166718cd81e33408cfafebe97827bf30e.